{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 94,
  "lineage": "ea2640e0-33a0-8290-19bb-7352e887f898",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-039790db2f59eadd3",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-19-164-6.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.164.6",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-eip"
            },
            "tags_all": {
              "Name": "dev-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:147174681190:instance/i-0c0cfc0b416b6bbad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0cfc0b416b6bbad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0075721eb7fcd1557",
            "private_dns": "ip-10-1-0-4.us-east-2.compute.internal",
            "private_ip": "10.1.0.4",
            "public_dns": "ec2-3-135-219-207.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.219.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d950f1c332688b86",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c23055472690ece6",
            "tags": {
              "Name": "dev-bastion"
            },
            "tags_all": {
              "Name": "dev-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b1a5f954b16dec3"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.dev",
            "data.template_file.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:147174681190:instance/i-0169c72127a60c5b5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0169c72127a60c5b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-095c471819d814202",
            "private_dns": "ip-10-1-3-54.us-east-2.compute.internal",
            "private_ip": "10.1.3.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068be2cb9f4a1ddac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eb1399192d87cde",
            "tags": {
              "Name": "dev-api"
            },
            "tags_all": {
              "Name": "dev-api"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03dbfb329daf57809"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev",
            "aws_security_group.bastion",
            "aws_security_group.devapi",
            "aws_subnet.private",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:147174681190:instance/i-070998e329d3792ac",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070998e329d3792ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-031fd6a5a9cdd5264",
            "private_dns": "ip-10-1-3-204.us-east-2.compute.internal",
            "private_ip": "10.1.3.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f6c9341b2674b32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eb1399192d87cde",
            "tags": {
              "Name": "dev-app"
            },
            "tags_all": {
              "Name": "dev-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0553aabc401769735"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev",
            "aws_security_group.bastion",
            "aws_security_group.devapp",
            "aws_subnet.private",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:147174681190:instance/i-04afd702e1775fdf9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04afd702e1775fdf9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06289a6121ebaf562",
            "private_dns": "ip-10-1-3-103.us-east-2.compute.internal",
            "private_ip": "10.1.3.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-010e718b3c8d2a129",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eb1399192d87cde",
            "tags": {
              "Name": "dev-jenkins"
            },
            "tags_all": {
              "Name": "dev-jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02f18e0b7d0e16617"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev",
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_subnet.private",
            "aws_vpc.dev",
            "data.template_file.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:internet-gateway/igw-02c0f2cd61e28721c",
            "id": "igw-02c0f2cd61e28721c",
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:loadbalancer/app/devapi-alb/3ed97a8a3100b21c",
            "arn_suffix": "app/devapi-alb/3ed97a8a3100b21c",
            "dns_name": "internal-devapi-alb-1203838204.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:loadbalancer/app/devapi-alb/3ed97a8a3100b21c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devapi-alb",
            "security_groups": [
              "sg-06e379d1a1af4eceb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ca0271abf775031"
              },
              {
                "subnet_id": "subnet-0c23055472690ece6"
              },
              {
                "subnet_id": "subnet-0e8a1c6c635c1aad1"
              }
            ],
            "subnets": [
              "subnet-07ca0271abf775031",
              "subnet-0c23055472690ece6",
              "subnet-0e8a1c6c635c1aad1"
            ],
            "tags": {
              "Environment": "api-alb"
            },
            "tags_all": {
              "Environment": "api-alb"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:loadbalancer/app/devapp-alb/21b50143490a7fee",
            "arn_suffix": "app/devapp-alb/21b50143490a7fee",
            "dns_name": "devapp-alb-1800104259.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:loadbalancer/app/devapp-alb/21b50143490a7fee",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devapp-alb",
            "security_groups": [
              "sg-06e379d1a1af4eceb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ca0271abf775031"
              },
              {
                "subnet_id": "subnet-0c23055472690ece6"
              },
              {
                "subnet_id": "subnet-0e8a1c6c635c1aad1"
              }
            ],
            "subnets": [
              "subnet-07ca0271abf775031",
              "subnet-0c23055472690ece6",
              "subnet-0e8a1c6c635c1aad1"
            ],
            "tags": {
              "Environment": "app-alb"
            },
            "tags_all": {
              "Environment": "app-alb"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:loadbalancer/app/jenkins-lb-tf/50142a72f2a97f2b",
            "arn_suffix": "app/jenkins-lb-tf/50142a72f2a97f2b",
            "dns_name": "jenkins-lb-tf-406744946.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:loadbalancer/app/jenkins-lb-tf/50142a72f2a97f2b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-lb-tf",
            "security_groups": [
              "sg-06e379d1a1af4eceb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ca0271abf775031"
              },
              {
                "subnet_id": "subnet-0c23055472690ece6"
              },
              {
                "subnet_id": "subnet-0e8a1c6c635c1aad1"
              }
            ],
            "subnets": [
              "subnet-07ca0271abf775031",
              "subnet-0c23055472690ece6",
              "subnet-0e8a1c6c635c1aad1"
            ],
            "tags": {
              "Environment": "jenkins"
            },
            "tags_all": {
              "Environment": "jenkins"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:listener/app/devapi-alb/3ed97a8a3100b21c/4ab75012cbd6ce3a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/devapilb-tg/93c827a0791af6d4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:listener/app/devapi-alb/3ed97a8a3100b21c/4ab75012cbd6ce3a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:loadbalancer/app/devapi-alb/3ed97a8a3100b21c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devapi",
            "aws_lb_target_group.devapi",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:listener/app/devapp-alb/21b50143490a7fee/2d36d4aeb5b665dd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/devapplb-tg/fff11fe22ba063e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:listener/app/devapp-alb/21b50143490a7fee/2d36d4aeb5b665dd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:loadbalancer/app/devapp-alb/21b50143490a7fee",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devapp",
            "aws_lb_target_group.devapp",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "r_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:listener/app/jenkins-lb-tf/50142a72f2a97f2b/8be0574ea0fb6d91",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/jenkins/edb1fbb30b96f3a0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:listener/app/jenkins-lb-tf/50142a72f2a97f2b/8be0574ea0fb6d91",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:loadbalancer/app/jenkins-lb-tf/50142a72f2a97f2b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.jenkins",
            "aws_lb_target_group.jenkins",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/devapilb-tg/93c827a0791af6d4",
            "arn_suffix": "targetgroup/devapilb-tg/93c827a0791af6d4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/devapilb-tg/93c827a0791af6d4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "devapilb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/devapplb-tg/fff11fe22ba063e4",
            "arn_suffix": "targetgroup/devapplb-tg/fff11fe22ba063e4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/devapplb-tg/fff11fe22ba063e4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "devapplb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/jenkins/edb1fbb30b96f3a0",
            "arn_suffix": "targetgroup/jenkins/edb1fbb30b96f3a0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/jenkins/edb1fbb30b96f3a0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jenkins",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/jenkins/edb1fbb30b96f3a0-20210819061647276800000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/jenkins/edb1fbb30b96f3a0",
            "target_id": "i-04afd702e1775fdf9"
          },
          "dependencies": [
            "aws_instance.jenkins",
            "aws_key_pair.dev",
            "aws_lb_target_group.jenkins",
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_subnet.private",
            "aws_vpc.dev",
            "data.template_file.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "devapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/devapilb-tg/93c827a0791af6d4-20210819061643800400000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/devapilb-tg/93c827a0791af6d4",
            "target_id": "i-0169c72127a60c5b5"
          },
          "dependencies": [
            "aws_instance.devapi",
            "aws_key_pair.dev",
            "aws_lb_target_group.devapi",
            "aws_security_group.bastion",
            "aws_security_group.devapi",
            "aws_subnet.private",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "devapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/devapplb-tg/fff11fe22ba063e4-20210819061655407400000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:147174681190:targetgroup/devapplb-tg/fff11fe22ba063e4",
            "target_id": "i-070998e329d3792ac"
          },
          "dependencies": [
            "aws_instance.devapp",
            "aws_key_pair.dev",
            "aws_lb_target_group.devapp",
            "aws_security_group.bastion",
            "aws_security_group.devapp",
            "aws_subnet.private",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039790db2f59eadd3",
            "connectivity_type": "public",
            "id": "nat-0b3901b504de94d41",
            "network_interface_id": "eni-02182e6c6d8797ab5",
            "private_ip": "10.1.0.156",
            "public_ip": "3.19.164.6",
            "subnet_id": "subnet-0c23055472690ece6",
            "tags": {
              "Name": "dev-natgw"
            },
            "tags_all": {
              "Name": "dev-natgw"
            }
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dataroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:route-table/rtb-0ba9296016f40f051",
            "id": "rtb-0ba9296016f40f051",
            "owner_id": "147174681190",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b3901b504de94d41",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-data"
            },
            "tags_all": {
              "Name": "dev-route-data"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:route-table/rtb-01cbacae7dc4983fd",
            "id": "rtb-01cbacae7dc4983fd",
            "owner_id": "147174681190",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b3901b504de94d41",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-route"
            },
            "tags_all": {
              "Name": "dev-private-route"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:route-table/rtb-00dc1bb86504bf4e8",
            "id": "rtb-00dc1bb86504bf4e8",
            "owner_id": "147174681190",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c0f2cd61e28721c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-route"
            },
            "tags_all": {
              "Name": "dev-public-route"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dataassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0168a278c57da5fdd",
            "route_table_id": "rtb-0ba9296016f40f051",
            "subnet_id": "subnet-05a13dc050d9bcf01"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0067405f67d9baa22",
            "route_table_id": "rtb-0ba9296016f40f051",
            "subnet_id": "subnet-073ad70a7f498ae66"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec0d1a56767fc4ed",
            "route_table_id": "rtb-0ba9296016f40f051",
            "subnet_id": "subnet-0a04f1960dbccab18"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0042b6e8f9bfab07a",
            "route_table_id": "rtb-01cbacae7dc4983fd",
            "subnet_id": "subnet-01eb1399192d87cde"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c9d00b0eac284cf",
            "route_table_id": "rtb-01cbacae7dc4983fd",
            "subnet_id": "subnet-07f3f89dda4f6dd89"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05352855c4cef2015",
            "route_table_id": "rtb-01cbacae7dc4983fd",
            "subnet_id": "subnet-0f0d1f0bbdaadf6c6"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd46e92527034f1d",
            "route_table_id": "rtb-00dc1bb86504bf4e8",
            "subnet_id": "subnet-0c23055472690ece6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04867a16c5ba2db8e",
            "route_table_id": "rtb-00dc1bb86504bf4e8",
            "subnet_id": "subnet-07ca0271abf775031"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3ebcbf52d83ab48",
            "route_table_id": "rtb-00dc1bb86504bf4e8",
            "subnet_id": "subnet-0e8a1c6c635c1aad1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:security-group/sg-06e379d1a1af4eceb",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e379d1a1af4eceb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "alb from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "147174681190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sg"
            },
            "tags_all": {
              "Name": "dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:security-group/sg-06b1a5f954b16dec3",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b1a5f954b16dec3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "147174681190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-bastion-sg"
            },
            "tags_all": {
              "Name": "dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:security-group/sg-03dbfb329daf57809",
            "description": "Allow tomcat inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dbfb329daf57809",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "devapi from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b1a5f954b16dec3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devapi",
            "name_prefix": "",
            "owner_id": "147174681190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-api-sg"
            },
            "tags_all": {
              "Name": "dev-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:security-group/sg-0553aabc401769735",
            "description": "Allow tomcat inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0553aabc401769735",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "devapp from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b1a5f954b16dec3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devapp",
            "name_prefix": "",
            "owner_id": "147174681190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-app-sg"
            },
            "tags_all": {
              "Name": "dev-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:security-group/sg-02f18e0b7d0e16617",
            "description": "Allow jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f18e0b7d0e16617",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ssh-jekins from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b1a5f954b16dec3"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ssh-jekins from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e379d1a1af4eceb"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "147174681190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-jenkins-sg"
            },
            "tags_all": {
              "Name": "dev-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:security-group/sg-0d7fb7e1ec65b0e40",
            "description": "Allow rds inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7fb7e1ec65b0e40",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "rds from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f18e0b7d0e16617"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "rds from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03dbfb329daf57809"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "rds from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0553aabc401769735"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "rds from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b1a5f954b16dec3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "147174681190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-rds-sg"
            },
            "tags_all": {
              "Name": "dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.devapi",
            "aws_security_group.devapp",
            "aws_security_group.jenkins",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:subnet/subnet-05a13dc050d9bcf01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-05a13dc050d9bcf01",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev-datasubnet-1"
            },
            "tags_all": {
              "Name": "dev-datasubnet-1"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:subnet/subnet-073ad70a7f498ae66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.7.0/24",
            "id": "subnet-073ad70a7f498ae66",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev-datasubnet-2"
            },
            "tags_all": {
              "Name": "dev-datasubnet-2"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:subnet/subnet-0a04f1960dbccab18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.8.0/24",
            "id": "subnet-0a04f1960dbccab18",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev-datasubnet-3"
            },
            "tags_all": {
              "Name": "dev-datasubnet-3"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:subnet/subnet-01eb1399192d87cde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-01eb1399192d87cde",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev-privatesubnet-1"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-1"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:subnet/subnet-07f3f89dda4f6dd89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-07f3f89dda4f6dd89",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev-privatesubnet-2"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-2"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:subnet/subnet-0f0d1f0bbdaadf6c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0f0d1f0bbdaadf6c6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev-privatesubnet-3"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-3"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:subnet/subnet-0c23055472690ece6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0c23055472690ece6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev-publicsubnet-1"
            },
            "tags_all": {
              "Name": "dev-publicsubnet-1"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:subnet/subnet-07ca0271abf775031",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-07ca0271abf775031",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev-publicsubnet-2"
            },
            "tags_all": {
              "Name": "dev-publicsubnet-2"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:subnet/subnet-0e8a1c6c635c1aad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0e8a1c6c635c1aad1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev-publicsubnet-3"
            },
            "tags_all": {
              "Name": "dev-publicsubnet-3"
            },
            "vpc_id": "vpc-0e96e6336af9d6a94"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:147174681190:vpc/vpc-0e96e6336af9d6a94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-06eb8b675dc0ea72a",
            "default_route_table_id": "rtb-093bf657c14bec506",
            "default_security_group_id": "sg-0fc90b3bfd2770cf0",
            "dhcp_options_id": "dopt-911b72fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e96e6336af9d6a94",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-093bf657c14bec506",
            "owner_id": "147174681190",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}